// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventLabelStatus /> renders correcty event approved  1`] = `
<Popover
  placement="top"
  trigger={
    Array [
      "mouseenter",
    ]
  }
>
  <Popover.Trigger>
    <EventLabelStatus__LabelStatus
      color="#088A20"
      id="event-label-status"
    >
      <FormattedMessage
        id="approved"
        values={Object {}}
      />
    </EventLabelStatus__LabelStatus>
  </Popover.Trigger>
</Popover>
`;

exports[`<EventLabelStatus /> renders correcty event event waiting 1`] = `
<Popover
  placement="top"
  trigger={
    Array [
      "mouseenter",
    ]
  }
>
  <Popover.Trigger>
    <EventLabelStatus__LabelStatus
      color="#f09200"
      id="event-label-status"
    >
      <EyeBar
        className="mr-5"
        color="#fff"
        size={16}
      />
      <FormattedMessage
        id="waiting-examination"
        values={Object {}}
      />
    </EventLabelStatus__LabelStatus>
  </Popover.Trigger>
  <Popover.Content>
    <Popover.Body>
      <FormattedMessage
        id="global.private"
        values={Object {}}
      />
      <br />
       
      <br />
      <FormattedMessage
        id="event-preview-waiting-exam"
        values={Object {}}
      />
    </Popover.Body>
  </Popover.Content>
</Popover>
`;

exports[`<EventLabelStatus /> renders correcty event refused 1`] = `
<Popover
  placement="top"
  trigger={
    Array [
      "mouseenter",
    ]
  }
>
  <Popover.Trigger>
    <EventLabelStatus__LabelStatus
      color="#dc3545"
      id="event-label-status"
    >
      <EyeBar
        className="mr-5"
        color="#fff"
        size={16}
      />
      <FormattedMessage
        id="refused"
        values={Object {}}
      />
    </EventLabelStatus__LabelStatus>
  </Popover.Trigger>
  <Popover.Content>
    <Popover.Body>
      <FormattedMessage
        id="global.private"
        values={Object {}}
      />
      <br />
       
      <br />
      <FormattedMessage
        id="event-preview-refused-by-admin"
        values={Object {}}
      />
    </Popover.Body>
  </Popover.Content>
</Popover>
`;
